--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -108,6 +108,8 @@ html {
 
 .function-output #play-output {
     color: #c1c1c1;
+    word-break: break-all;
+    max-width: 97%;
 }
 
 .function-input textarea {
