--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -121,6 +121,7 @@ html {
     padding-left: .5rem;
     padding-right: .5rem;
     max-width: 97%;
+    font-size: 90%;
     resize: none;
     border-radius: 5px;
     outline: none;
