--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -588,6 +588,13 @@ ul#searchresults li {
     background-color: var(--color3);
     border-radius: 8px;
     padding: 7px;
+    transition: .2s;
+}
+
+ul#searchresults li:hover {
+    transform: scale(1.01);
+    border-radius: 12px;
+    transition: .2s;
 }
 
 ul#searchresults li.focus {
