--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -583,7 +583,7 @@ ul#searchresults {
 }
 
 ul#searchresults li {
-    margin: 1rem 1rem;
+    margin: 1rem;
     padding: 2px;
     background-color: var(--color3);
     border-radius: 8px;
