--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -311,8 +311,10 @@ a:link:not(.editPage, .mobile-nav-chapters, .chapter li a, .discord-button, .dis
     }
 }
 
-#editPageIcon {
-    padding: .4rem;
+@media (max-width: 750px) {
+    #editPageIcon {
+        padding: .3rem;
+    }
 }
 
 /* Nav Icons */
