--- a/src/theme/css/changelog.css
+++ b/src/theme/css/changelog.css
@@ -10,6 +10,10 @@
     position: relative;
 }
 
+.changelog .hljs {
+    box-shadow: none;
+}
+
 .changePrev {
     margin-top: 10px;
     border: solid;
