--- a/src/settings/settings.css
+++ b/src/settings/settings.css
@@ -5,6 +5,10 @@ body {
     touch-action: manipulation;
 }
 
+.editPage, .breadcrumb {
+    visibility: hidden;
+}
+
 /* Tag Beta Feature */
 
 .tag-beta {
