--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -850,3 +850,111 @@ ul#searchresults span.teaser em {
 ::-moz-selection {
     background: hsl(0deg 0% 100% / 8%);
 }
+
+/* Snowflake animation | Winter event */
+
+.snowflakes {
+    z-index: 1000;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: -90px;
+    left: 0;
+    pointer-events: none; 
+}
+
+.snowflakes i,
+.snowflakes i:after,
+.snowflakes i:before {
+    background: white;
+}
+
+.snowflakes i:after,
+.snowflakes i:before {
+    height: 100%;
+    width: 100%;
+    content: ".";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    -webkit-transform: rotate(120deg);
+}
+
+.snowflakes i:before {
+    -webkit-transform: rotate(240deg);
+}
+
+@-webkit-keyframes snowflakes {
+    0% {
+        -webkit-transform: translate3d(0, 0, 0) rotate(0deg) scale(0.6);
+    }
+    100% {
+        -webkit-transform: translate3d(15px, 1200px, 0px) rotate(360deg) scale(0.6);
+    }
+}
+
+.snowflakes i {
+    display: inline-block;
+    -webkit-animation: snowflakes 3s linear 2s 20;
+    -moz-animation: snowflakes 3s linear 2s 20;
+    position: relative;
+}
+
+.snowflakes i:nth-child(3n) {
+    width: 20px;
+    height: 5px;
+    -webkit-animation-duration: 6s;
+    -webkit-animation-iteration-count: 30;
+    -webkit-transform-origin: right -45px;
+}
+.snowflakes i:nth-child(3n+1) {
+    width: 24px;
+    height: 5.5px;
+    -webkit-animation-duration: 8s;
+    -webkit-animation-iteration-count: 45;
+    -webkit-transform-origin: right -30px;
+}
+
+.snowflakes i:nth-child(3n+2) {
+    width: 28px;
+    height: 6px;
+    -webkit-animation-duration: 10s;
+    -webkit-animation-iteration-count: 60;
+    -webkit-transform-origin: right -15px;
+}
+
+.snowflakes i:nth-child(7n) {
+    opacity: 0.3;
+    -webkit-animation-delay: 0s;
+    -webkit-animation-timing-function: ease-in;
+}
+.snowflakes i:nth-child(7n+1) {
+    opacity: 0.4;
+    -webkit-animation-delay: 1s;
+    -webkit-animation-timing-function: ease-out;
+}
+.snowflakes i:nth-child(7n+2) {
+  opacity: 0.5;
+  -webkit-animation-delay: 1.5s;
+  -webkit-animation-timing-function: linear;
+}
+.snowflakes i:nth-child(7n+3) {
+  opacity: 0.6;
+  -webkit-animation-delay: 2s;
+  -webkit-animation-timing-function: ease-in;
+}
+.snowflakes i:nth-child(7n+4) {
+  opacity: 0.7;
+  -webkit-animation-delay: 2.5s;
+  -webkit-animation-timing-function: linear;
+}
+.snowflakes i:nth-child(7n+5) {
+  opacity: 0.8;
+  -webkit-animation-delay: 3s;
+  -webkit-animation-timing-function: ease-out;
+}
+.snowflakes i:nth-child(7n+6) {
+  opacity: 0.9;
+  -webkit-animation-delay: 3.5s;
+  -webkit-animation-timing-function: ease-in;
+}
