--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -139,6 +139,18 @@
                     });
                 </script>
 
+                <div class="snowflakes">
+	                <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
+	                <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
+	                <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
+	                <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
+	                <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
+	                <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
+	                <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
+	                <i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i>
+	                <i></i><i></i><i></i><i></i>
+                </div>
+
                 <div id="content" class="content">
                     <main>
                         <nav class="breadcrumb">
